# cargo-publish-action

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: release.yml
src/: github.rs
