[package]
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
description = "GitHub Action to automate publishing Rust crates to crates.io with ease."
edition = "2021"
keywords = ["github-action", "cargo", "crates", "publish"]
license = "MIT"
name = "cargo-publish-action"
homepage = "http://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/cargo-publish-action"
version = "0.1.0"
readme = "README.md"

[[bin]]
name = "cargo-publish-action"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo = {version = "0.75.0", features = ["vendored-openssl"]}
futures = "0.3.21"
serde_json = "1.0.95"
thiserror = "1.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"]}

[dev-dependencies]
dotenv = "0.15.0"
tempfile = "3.5.0"
